[package]
name = "ruml"
version = "0.1.0"
description = "Generate plantuml code from Rust's modules."
authors = ["nrskt <chipuno0602@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/nrskt/ruml"
repository = "https://github.com/nrskt/ruml.git"
homepage = "https://github.com/nrskt/ruml"
keywords = ["uml", "plantuml", "generator", "modeling-language"]
categories = ["visualization"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
quote = "1.0.2"
walkdir = "2.2.9"

[dependencies.syn]
version = "1.0.5"
features = [
    "extra-traits", 
    "full", 
    "parsing",
    "printing",
]